@@ -16,6 +16,7 @@ v8.0.28
 - WL#14720: Support for Multi Factor authentication (pure Python)
 - BUG#33486094: Stored value in Decimal field is returned as str on prepared pure python cursor
 - BUG#33410592: Fix compiler warnings
+- BUG#33409819: Fix failure when using a conversion class in CMySQLConnection
 - BUG#27358941: Invalid types for params silently ignored in execute method
 
 v8.0.27
